--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
       <form id="messageForm" name="messageForm">
         <div class="form-group">
           <div class="input-group  clearfix">
-            <input type="text" id="messageArea" placeholder="Type a message..." autocomplete="off" class="form-control">
+            <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control">
             <button type="submit" class="primary">Send</button>
           </div>
         </div>
